--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@angular-demo/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "serve": "nx run angular-demo:serve:development"
+  },
   "private": true,
   "dependencies": {
     "@angular/common": "~20.1.0",
@@ -30,10 +32,13 @@
     "@nx/eslint-plugin": "21.4.0",
     "@nx/jest": "21.4.0",
     "@nx/js": "21.4.0",
+    "@nx/storybook": "21.4.0",
     "@nx/vite": "21.4.0",
     "@nx/web": "21.4.0",
     "@nx/workspace": "21.4.0",
     "@schematics/angular": "~20.1.0",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/angular": "^9.1.12",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -58,6 +63,7 @@
     "postcss": "^8.4.5",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
+    "storybook": "^9.1.12",
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
@@ -65,6 +71,7 @@
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.29.0",
     "vite": "^6.0.0",
-    "vitest": "^3.0.0"
+    "vitest": "^3.0.0",
+    "eslint-plugin-storybook": "9.1.12"
   }
 }
