feat: 加入 @tailwindcss/postcss lodash-es tippy.js

--- a/libs/package.json
+++ b/libs/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^20.1.0",
-    "@angular/core": "^20.1.0"
+    "@angular/core": "^20.1.0",
+    "rxjs": "^7.0.0",
+    "lodash-es": "^4.17.21",
+    "@angular/forms": "^20.1.0",
+    "@nx/angular": "*"
   },
   "sideEffects": false
 }
