--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "serve": "nx run angular-demo:serve:development"
+    "serve": "nx run angular-demo:serve:development",
+    "i": "npm i --legacy-peer-deps"
   },
   "private": true,
   "dependencies": {
@@ -14,7 +15,10 @@
     "@angular/platform-browser": "~20.1.0",
     "@angular/platform-browser-dynamic": "~20.1.0",
     "@angular/router": "~20.1.0",
+    "@tailwindcss/postcss": "^4.1.14",
+    "lodash-es": "^4.17.21",
     "rxjs": "~7.8.0",
+    "tippy.js": "^6.3.7",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -43,6 +47,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^30.0.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.29.0",
     "@vitest/coverage-v8": "^3.0.5",
@@ -51,6 +56,7 @@
     "autoprefixer": "^10.4.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-storybook": "9.1.12",
     "jest": "^30.0.2",
     "jest-environment-jsdom": "^30.0.2",
     "jest-preset-angular": "~15.0.0",
@@ -60,18 +66,17 @@
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "~20.1.0",
     "nx": "21.4.0",
-    "postcss": "^8.4.5",
+    "postcss": "^8.5.6",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "storybook": "^9.1.12",
-    "tailwindcss": "^3.0.2",
+    "tailwindcss": "^3.4.18",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.29.0",
     "vite": "^6.0.0",
-    "vitest": "^3.0.0",
-    "eslint-plugin-storybook": "9.1.12"
+    "vitest": "^3.0.0"
   }
 }
