--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "@angular-demo/source",
+  "name": "@my-lib/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "serve": "nx run angular-demo:serve:development",
+    "serve": "nx run angular-demo:serve:development --port 4020",
+    "storybook": "nx run libs:storybook",
+    "sb:update": "npx storybook@latest upgrade",
     "i": "npm i --legacy-peer-deps"
   },
   "private": true,
@@ -42,7 +44,7 @@
     "@nx/workspace": "21.4.0",
     "@schematics/angular": "~20.1.0",
     "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/angular": "^9.1.12",
+    "@storybook/angular": "^9.1.13",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -56,7 +58,7 @@
     "autoprefixer": "^10.4.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
-    "eslint-plugin-storybook": "9.1.12",
+    "eslint-plugin-storybook": "9.1.13",
     "jest": "^30.0.2",
     "jest-environment-jsdom": "^30.0.2",
     "jest-preset-angular": "~15.0.0",
@@ -69,7 +71,7 @@
     "postcss": "^8.5.6",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
-    "storybook": "^9.1.12",
+    "storybook": "^9.1.13",
     "tailwindcss": "^3.4.18",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
